--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,37 @@
 {
-    "name": "nattreid/tracyplugin",
-    "description": "Tracy plugin for Nette Framework",
-    "type": "library",
-    "license": ["Unlicense"],
-    "authors": [
-        {
-            "name": "Attreid",
-            "email": "attreid@gmail.com"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.newtravel.cz"
-        }
-    ],
-    "require": {
-        "php": ">= 5.6",
-        "nextras/mail-panel": "~2.3",
-        "tracy/tracy": "~2.4",
-        "nette/http": "~2.4",
-        "nette/di": "~2.4",
-        "nette/bootstrap": "~2.4",
-        "nette/utils": "~2.4"
-    },
-    "require-dev": {
-        "nette/tester": "~1.7"
-    },
-    "autoload": {
-        "classmap": ["src/"]
+  "name": "nattreid/tracyplugin",
+  "description": "Tracy plugin for Nette Framework",
+  "type": "library",
+  "license": [
+    "Unlicense"
+  ],
+  "authors": [
+    {
+      "name": "Attreid",
+      "email": "attreid@gmail.com"
     }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.newtravel.cz"
+    }
+  ],
+  "require": {
+    "php": ">= 5.6",
+    "nextras/mail-panel": "~2.3",
+    "tracy/tracy": "~2.4",
+    "nette/http": "~2.4",
+    "nette/di": "~2.4",
+    "nette/bootstrap": "~2.4",
+    "nette/utils": "~2.4"
+  },
+  "require-dev": {
+    "nette/tester": "~1.7"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  }
 }
