--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,14 @@
 {
-  "name": "nattreid/tracyplugin",
+  "name": "nattreid/tracy-plugin",
   "description": "Tracy plugin for Nette Framework",
   "type": "library",
   "license": [
-    "Unlicense"
+    "MIT"
   ],
   "authors": [
     {
       "name": "Attreid",
       "email": "attreid@gmail.com"
-    }
-  ],
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packages.newtravel.cz"
     }
   ],
   "require": {
