--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
   "require": {
     "php": ">= 7.1",
     "nextras/mail-panel": "~2.3",
-    "tracy/tracy": "~2.4",
-    "nette/http": "~2.4",
-    "nette/di": "~2.4",
-    "nette/bootstrap": "~2.4",
-    "nette/utils": "~2.4"
+    "tracy/tracy": "~3.0",
+    "nette/http": "~3.0",
+    "nette/di": "~3.0",
+    "nette/bootstrap": "~3.0",
+    "attreid/utils": "~1.0"
   },
   "require-dev": {
-    "nette/tester": "~1.7"
+    "nette/tester": "~2.4"
   },
   "autoload": {
     "classmap": [
