--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "nette/http": "~3.0",
     "nette/di": "~3.0",
     "nette/bootstrap": "~3.0",
-    "attreid/utils": "~1.0"
+    "nattreid/utils": "~1.0"
   },
   "require-dev": {
     "nette/tester": "~2.4"
